--- a/day_3_itinerary.html
+++ b/day_3_itinerary.html
@@ -91,7 +91,7 @@
         </div>
 
         <!-- 區塊二：飯店 → 清水寺周邊：分步導航 (去程) -->
-        <div class="route-card">
+        <div class="route-card bg-gary-100 border-t-4 border-red-500">
             <h3 class="text-2xl font-semibold text-gray-800 mb-5 flex items-center border-b pb-3">
                 <span class="mr-2">🌅</span> 飯店 → 清水寺：分步導航 (公車直達)
             </h3>
@@ -99,9 +99,9 @@
             <!-- 步驟容器 -->
             <div class="space-y-6">
                 <!-- 步驟 1: Hotel -> Kujo Kawaramachi Walk -->
-                <div class="border-l-4 border-yellow-500 pl-4">
+                <div class="border-l-4 border-red-500 pl-4">
                     <h4 class="text-lg font-bold text-gray-900 flex items-center mb-1">
-                        <span class="bg-yellow-500 text-white rounded-full w-6 h-6 flex items-center justify-center mr-2">1</span> 🚶 步行至公車站
+                        <span class="bg-red-500 text-white rounded-full w-6 h-6 flex items-center justify-center mr-2">1</span> 🚶 步行至公車站
                     </h4>
                     <p class="text-sm text-gray-600 ml-8">
                         <span class="font-bold text-blue-700">區間：</span> <strong>飯店</strong> → <strong>九条河原町</strong> 公車站<br>
@@ -111,13 +111,13 @@
                 </div>
 
                 <!-- 步驟 2: Kujo Kawaramachi -> Gojo-zaka Bus -->
-                <div class="border-l-4 border-green-500 pl-4">
+                <div class="border-l-4 border-yellow-500 pl-4">
                     <h4 class="text-lg font-bold text-gray-900 flex items-center mb-1">
-                        <span class="bg-green-500 text-white rounded-full w-6 h-6 flex items-center justify-center mr-2">2</span> 🚌 九条河原町 → 五条坂站
+                        <span class="bg-yellow-500 text-white rounded-full w-6 h-6 flex items-center justify-center mr-2">2</span> 🚌 九条河原町 → 五条坂站
                     </h4>
                     <p class="text-sm text-gray-600 ml-8">
                         <span class="font-bold text-blue-700">交通：</span> 京都市營公車<br>
-                        <span class="font-bold text-blue-700">車種/路線：</span> <strong>207 號</strong> (往祇園/九条車庫方向)<br>
+                        <span class="font-bold text-blue-700">車種/路線：</span> <strong class="font-bold text-white bg-red-500 rounded-full">207 City Bus </strong> (往祇園/九条車庫方向)<br>
                         <span class="font-bold text-blue-700">時長：</span> 約 <strong> 15 分鐘</strong><br>
                         <span class="font-bold text-blue-700">費用：</span> <span class="text-red-600 font-extrabold">¥230</span><br>
                         <span class="font-bold text-blue-700">指示：</span> 在 <strong>馬町</strong> 站下車，下車後步行約 2 分鐘到市川屋珈琲吃早餐
@@ -178,6 +178,76 @@
             </a>
             </div>			
         </div>
+
+        <!-- 區塊三：嵐山一日觀光行程 (景點資訊) -->
+        <div class="route-card bg-pink-50 border-t-4 border-pink-500">
+            <h3 class="text-2xl font-semibold text-pink-800 mb-4 flex items-center">
+                <span class="mr-2">⛩️</span> 清水寺東山步行路線
+            </h3>
+            <p class="text-sm text-gray-600 font-bold mb-4">
+                景點之間皆為步行。建議穿過二年坂、三年坂時，邊走邊逛紀念品店和享用點心。
+            </p>
+            <!-- 步驟容器 -->
+            <div class="space-y-6">
+                <div class="border-l-4 border-pink-300 pl-4">
+                    <h4 class="text-lg font-bold text-gray-900 flex items-center mb-1">
+                        <span class="bg-pink-300 text-white rounded-full w-6 h-6 flex items-center justify-center mr-2">
+                            1</span> ⛩️ 清水寺 
+                    </h4>
+                    <p class="text-sm text-gray-600 ml-8">
+                        <span class="font-bold text-blue-700">停留：</span><strong> 2小時</strong><br>
+                        <span class="font-bold text-blue-700">特色：</span>世界遺產，著名的懸空清水舞台。<br>
+                    </p>
+                </div> 
+                <div class="border-l-4 border-pink-400 pl-4">
+                    <h4 class="text-lg font-bold text-gray-900 flex items-center mb-1">
+                        <span class="bg-pink-400 text-white rounded-full w-6 h-6 flex items-center justify-center mr-2">
+                            2</span> 🚶 三年坂 與 二年坂 
+                    </h4>
+                    <p class="text-sm text-gray-600 ml-8">
+                        <span class="font-bold text-blue-700">停留：</span><strong> 1.5小時</strong><br>
+                        <span class="font-bold text-blue-700">特色：</span>最具代表性的石板老街，兩旁充滿傳統町家建築、工藝品店。<br>
+                    </p>
+                </div>
+ 
+                <div class="border-l-4 border-pink-500 pl-4">
+                    <h4 class="text-lg font-bold text-gray-900 flex items-center mb-1">
+                        <span class="bg-pink-500 text-white rounded-full w-6 h-6 flex items-center justify-center mr-2">
+                            3</span> 🚶 高台寺竹林 
+                    </h4>
+                    <p class="text-sm text-gray-600 ml-8">
+                        <span class="font-bold text-blue-700">停留：</span><strong> 0.5小時</strong><br>
+                        <span class="font-bold text-blue-700">特色：</span>相較於熱門的嵐山竹林，高台寺的竹林相對安靜，能讓人更能沉浸在竹林幽深的氛圍中。<br>
+                    </p>
+                </div>   
+                <div class="border-l-4 border-pink-600 pl-4">
+                    <h4 class="text-lg font-bold text-gray-900 flex items-center mb-1">
+                        <span class="bg-pink-600 text-white rounded-full w-6 h-6 flex items-center justify-center mr-2">
+                            4</span> 🚶 一寧坂 & 石塀小路 
+                    </h4>
+                    <p class="text-sm text-gray-600 ml-8">
+                        <span class="font-bold text-blue-700">停留：</span><strong> 1小時</strong><br>
+                        <span class="font-bold text-blue-700">特色：</span>隱藏在主街道旁的小徑，特別是高石塀小路，氛圍寧靜優雅，充滿高級日式旅館。 <br>
+                    </p>
+                </div>                
+                <div class="border-l-4 border-pink-700 pl-4">
+                    <h4 class="text-lg font-bold text-gray-900 flex items-center mb-1">
+                        <span class="bg-pink-700 text-white rounded-full w-6 h-6 flex items-center justify-center mr-2">
+                            5</span> 🚶 八坂神社 
+                    </h4>
+                    <p class="text-sm text-gray-600 ml-8">
+                        <span class="font-bold text-blue-700">停留：</span><strong> 0.5小時</strong><br>
+                        <span class="font-bold text-blue-700">特色：</span>位於祇園東側，是京都最具代表性的神社之一，晚上燈火通明。<br>
+                    </p>
+                </div>                                             
+            </div>
+            <div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
+                <a href="https://maps.app.goo.gl/zATpNgRSXvVv14Xq8" target="_blank" 
+                class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-red-400 rounded-lg hover:bg-red-700 transition duration-150 shadow-md mt-4">
+                🗺️ 路線圖
+            </a>
+            </div>
+        </div>         
 
         <!-- 區塊四：祇園傍晚漫步路線 -->
         <div class="route-card bg-yellow-50 border-t-4 border-yellow-500">
