--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <!-- 區塊一：桃園機場 (TPE) 停車資訊 -->
         <div class="route-card bg-cyan-50 border-t-4 border-cyan-500">
             <h3 class="text-2xl font-semibold text-cyan-800 mb-4 flex items-center">
-                <span class="mr-2">🅿️</span> 台灣桃園機場 (TPE) 停車資訊
+                <span class="mr-2">🅿️</span> 機場停車資訊
             </h3>
             
             <p class="text-sm text-gray-600 font-bold mb-4">
