--- a/day_2_itinerary.html
+++ b/day_2_itinerary.html
@@ -69,6 +69,11 @@
             </h2>
         </header>
 
+
+        <!-- 封面圖片 -->
+        <div class="mb-6">
+            <img src="image/day2.jpg" alt="Day 2 嵐山封面" class="w-full rounded-2xl shadow-lg">
+        </div>
         <!-- 區塊一：本日交通路線總覽 -->
         <div class="route-card bg-blue-100 border-t-4 border-blue-500">
             <h3 class="text-2xl font-semibold text-indigo-800 mb-4 flex items-center">
