--- a/day_8_itinerary.html
+++ b/day_8_itinerary.html
@@ -69,6 +69,11 @@
             </h2>
         </header>
 
+
+        <!-- 封面圖片 -->
+        <div class="mb-6">
+            <img src="image/day8.jpg" alt="Day 8 返程封面" class="w-full rounded-2xl shadow-lg">
+        </div>
         <!-- 區塊一：航班與時間總覽 -->
         <div class="route-card bg-indigo-50 border-t-4 border-indigo-500">
             <h3 class="text-2xl font-semibold text-indigo-800 mb-4 flex items-center">
