--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
             </h2>
         </header>
 
+
+        <!-- 封面圖片 -->
+        <div class="mb-6">
+            <img src="image/day0.jpg" alt="京都旅遊封面" class="w-full rounded-2xl shadow-lg">
+        </div>
         <!-- 區塊一：桃園機場 (TPE) 停車資訊 -->
         <div class="route-card bg-cyan-50 border-t-4 border-cyan-500">
             <h3 class="text-2xl font-semibold text-cyan-800 mb-4 flex items-center">
